# cubipods

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: instruction.rs  lexer.rs  lib.rs  main.rs  memory.rs  stack.rs  storage.rs  vm.rs
src/utils/: bytes.rs  bytes32.rs  cli.rs  errors.rs  hex.rs  history.rs
tests/: integration_test.rs
tests/common/: mod.rs
