[package]
name = "cubipods"
version = "0.1.0"
edition = "2021"
authors = ["Can Vardar <https://github.com/icanvardar>"]
description = "A minimal EVM implemented in Rust."
readme = "./README.md"
license-file = "./LICENSE"
keywords = ["cubipods", "evm", "ethereum", "stack", "memory", "storage"]

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
hex = { version = "0.4.3" }
